core-env/eks-clusters/templates/nginx-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: nginx-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    hostname: "akpdemoapps.link"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces: 
        from: All
  - name: https
    # Important: The hostname needs to be set to your domain
    hostname: "akpdemoapps.link"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces: 
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: akpdemoapps-secret
